Diagrammeditor: Nur Typen aus Konfigurationsbereich
Es werden nur noch Typen aus dem anzuzeigenden Konfigurationsbereich
dargestellt.

--- a/src/main/resources/generator/diagramm/datenkatalog.vm
+++ b/src/main/resources/generator/diagramm/datenkatalog.vm
@@ -16,7 +16,9 @@ digraph {
 
 #foreach( $typ in $konfigurationsbereich.getTypen() )
 #foreach( $superTyp in $typ.getSuperTypen() )
+#if( $konfigurationsbereich.getTypen().contains($superTyp) )
     $superTyp.getName() -> $typ.getName() [dir=back arrowtail=onormal]
+#end
 #end
 #foreach( $mengenVerwendung in $typ.getMengen() )
 #foreach( $objektTyp in $mengenVerwendung.getObjektTypen() )
