--- a/src/main/resources/generator/html/uebersicht.vm
+++ b/src/main/resources/generator/html/uebersicht.vm
@@ -20,20 +20,25 @@
     //-->
 </script>
 <h1>Übersicht - Datenkatalog</h1>
-<table>
-    <caption>Konfigurationsbereiche</caption>
-    <tbody>
-    <tr>
-        <th>Konfigurationsbereich</th>
-        <th>Beschreibung</th>
-    </tr>
-    #foreach( $konfigurationsbereich in $konfigurationsbereiche )
-    <tr>
-        <td>$konfigurationsbereich.getName()</td>
-        <td>{Kurzinfo}</td>
-    </tr>
-    #end
-    </tbody>
-</table>
+
+<div class="uebersicht">
+    <table border="0" cellpadding="0" cellspacing="0">
+        <caption><span>Konfigurationsbereiche</span></caption>
+        <tbody>
+        <tr>
+            <th>Konfigurationsbereich</th>
+            <th>Beschreibung</th>
+        </tr>
+        #set( $row = 1 )
+        #foreach( $konfigurationsbereich in $konfigurationsbereiche )
+        <tr>
+            <td class="#if ($row % 2 == 0) rowColor #else altColor #end">$konfigurationsbereich.getName()</td>
+            <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">$konfigurationsbereich.getKurzinfo()</td>
+        </tr>
+            #set( $row = $row + 1 )
+        #end
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
