--- a/src/main/resources/generator/html/typ.vm
+++ b/src/main/resources/generator/html/typ.vm
@@ -2,6 +2,7 @@
 <html lang="de">
 <head>
     <title>Typ $typ.getName()</title>
+    <base href="../../">
     <meta charset="UTF-8">
     <meta name="date" content="2015-12-05"/>
     <meta name="keywords" content="Typen, Mengen, Attributgruppen, Attributlisten, Attribute, Datenkatalog, NERZ, ERZ, VRZ, UZ, Verkehrsrechnerzentrale, Unterzentrale">
