--- a/src/main/resources/generator/html/typ.vm
+++ b/src/main/resources/generator/html/typ.vm
@@ -9,33 +9,38 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css" title="Style"/>
 </head>
 <body>
-<h2>Typ $typ.getName()</h2>
-<p>$typ.getKurzinfo()</p>
+<p>$typ.getBereich().getZustaendiger().getName() / $typ.getBereich().getName()</p>
+<h2>Typ $typ.getName() ($typ.getPid()))</h2>
 <p><strong>Alle erweiterten Typen</strong></p>
 <p>
 #foreach( $superTyp in $typ.getSuperTypen() )
 <a href="${superTyp.getBereich().getZustaendiger().getPid()}/${superTyp.getBereich().getPid()}/${superTyp.getPid()}.html" target="objektFrame">$superTyp.getName()</a>#if( $velocityHasNext ), #end
 #end
 </p>
-<table>
-    <tr>
-        <td>Name:</td>
-        <td>$typ.getName()</td>
-    </tr>
-    <tr>
-        <td>PID:</td>
-        <td>$typ.getPid()</td>
-    </tr>
-    <tr>
-        <td>Konfigurationsbereich:</td>
-        <td>$typ.getBereich().getName()</td>
-    </tr>
-    <tr>
-        <td>Verantwortlich:</td>
-        <td>$typ.getBereich().getZustaendiger().getName()</td>
-    </tr>
-</table>
+<p><strong>Bekannte direkte Subtypen</strong></p>
+<p>TODO</p>
+<br>
+<p>$typ.getKurzinfo()</p>
 <p>$typ.getBeschreibung()</p>
-<p>TODO Mengen</p>
+<div class="uebersicht">
+    <table border="0" cellpadding="0" cellspacing="0">
+        <caption><span>Mengen</span></caption>
+        <tbody>
+        <tr>
+            <th>Menge</th>
+            <th>Beschreibung</th>
+        </tr>
+            #set( $row = 1 )
+            #foreach( $mengenVerwendung in $typ.getMengen() )
+            <tr>
+                <td class="#if ($row % 2 == 0) rowColor #else altColor #end"><a href="${mengenVerwendung.getBereich().getZustaendiger().getPid()}/${mengenVerwendung.getBereich().getPid()}/${mengenVerwendung.getPid()}.html">$mengenVerwendung.getMengenName()</a></td>
+                <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">$mengenVerwendung.getKurzinfo()</td>
+            </tr>
+                #set( $row = $row + 1 )
+            #end
+        </tbody>
+    </table>
+</div>
+<p>TODO Attributgruppen</p>
 </body>
 </html>
