Diagramm-Generator letzte Änderungen am Metamodell nachgezogen
Behandlung der Mengen im Template angepasst. Aufbau des Generators an
den vom HTML-Generator angeglichen.

--- a/src/main/resources/generator/diagramm/datenkatalog.vm
+++ b/src/main/resources/generator/diagramm/datenkatalog.vm
@@ -21,7 +21,7 @@ digraph {
 #end
 #end
 #foreach( $mengenVerwendung in $typ.getMengen() )
-#foreach( $objektTyp in $mengenVerwendung.getObjektTypen() )
+#foreach( $objektTyp in $mengenVerwendung.getMengenTyp().getObjektTypen() )
     $typ.getName() -> $objektTyp.getName() [label=$mengenVerwendung.getMengenName() arrowhead=vee color=red fontcolor=red]
 #end
 #end
