--- a/src/main/resources/generator/html/typ.vm
+++ b/src/main/resources/generator/html/typ.vm
@@ -22,6 +22,7 @@
 <br>
 <p>$typ.getKurzinfo()</p>
 <p>$typ.getBeschreibung()</p>
+#if( !$typ.getMengen().isEmpty() )
 <div class="uebersicht">
     <table border="0" cellpadding="0" cellspacing="0">
         <caption><span>Mengen</span></caption>
@@ -33,14 +34,15 @@
             #set( $row = 1 )
             #foreach( $mengenVerwendung in $typ.getMengen() )
             <tr>
-                <td class="#if ($row % 2 == 0) rowColor #else altColor #end"><a href="${mengenVerwendung.getBereich().getZustaendiger().getPid()}/${mengenVerwendung.getBereich().getPid()}/${mengenVerwendung.getPid()}.html">$mengenVerwendung.getMengenName()</a></td>
-                <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">$mengenVerwendung.getKurzinfo()</td>
+                <td class="#if ($row % 2 == 0) rowColor #else altColor #end"><a href="${mengenVerwendung.getMengenTyp().getBereich().getZustaendiger().getPid()}/${mengenVerwendung.getMengenTyp().getBereich().getPid()}/${mengenVerwendung.getMengenTyp().getPid()}.html">$mengenVerwendung.getMengenName()</a></td>
+                <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">$mengenVerwendung.getMengenTyp().getKurzinfo()</td>
             </tr>
                 #set( $row = $row + 1 )
             #end
         </tbody>
     </table>
 </div>
+#end
 <p>TODO Attributgruppen</p>
 </body>
 </html>
