Diagramm-Generator: Änderung am Metamodell nachgezogen
Dynamischer Typ ist jetzt eine Spezialisierung von Typ und kein Flag
mehr.

--- a/src/main/resources/generator/diagramm/datenkatalog.vm
+++ b/src/main/resources/generator/diagramm/datenkatalog.vm
@@ -9,7 +9,7 @@ digraph {
     edge [fontname=Arial fontsize=12]
 
 #foreach( $typ in $konfigurationsbereich.getTypen() )
-#if( $typ.isDynamisch() )
+#if( $typ.class.simpleName == "DynamischerTyp" )
     $typ.getName() [fillcolor=green]
 #end
 #end
