--- a/src/main/resources/generator/html/typ.vm
+++ b/src/main/resources/generator/html/typ.vm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <title>Typ $typ.getName()</title>
+    <title>Typ ${typ.getName()}</title>
     <base href="../../">
     <meta charset="UTF-8">
     <meta name="date" content="2015-12-05"/>
@@ -10,18 +10,18 @@
 </head>
 <body>
 <p>$typ.getBereich().getZustaendiger().getName() / $typ.getBereich().getName()</p>
-<h2>Typ $typ.getName() ($typ.getPid()))</h2>
+<h2>Typ ${typ.getName()} (${typ.getPid()}))</h2>
 <p><strong>Alle erweiterten Typen</strong></p>
 <p>
 #foreach( $superTyp in $typ.getSuperTypen() )
-<a href="${superTyp.getBereich().getZustaendiger().getPid()}/${superTyp.getBereich().getPid()}/${superTyp.getPid()}.html" target="objektFrame">$superTyp.getName()</a>#if( $velocityHasNext ), #end
+<a href="${superTyp.getBereich().getZustaendiger().getPid()}/${superTyp.getBereich().getPid()}/${superTyp.getPid()}.html" target="objektFrame">${superTyp.getName()}</a>#if( $velocityHasNext ), #end
 #end
 </p>
 <p><strong>Bekannte direkte Subtypen</strong></p>
 <p>TODO</p>
 <br>
-<p>$typ.getKurzinfo()</p>
-<p>$typ.getBeschreibung()</p>
+<p>${typ.getKurzinfo()}</p>
+<p>${typ.getBeschreibung()}</p>
 #if( !$typ.getMengen().isEmpty() )
 <div class="uebersicht">
     <table border="0" cellpadding="0" cellspacing="0">
@@ -34,8 +34,8 @@
             #set( $row = 1 )
             #foreach( $mengenVerwendung in $typ.getMengen() )
             <tr>
-                <td class="#if ($row % 2 == 0) rowColor #else altColor #end"><a href="${mengenVerwendung.getMengenTyp().getBereich().getZustaendiger().getPid()}/${mengenVerwendung.getMengenTyp().getBereich().getPid()}/${mengenVerwendung.getMengenTyp().getPid()}.html">$mengenVerwendung.getMengenName()</a></td>
-                <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">$mengenVerwendung.getMengenTyp().getKurzinfo()</td>
+                <td class="#if ($row % 2 == 0) rowColor #else altColor #end"><a href="${mengenVerwendung.getMengenTyp().getBereich().getZustaendiger().getPid()}/${mengenVerwendung.getMengenTyp().getBereich().getPid()}/${mengenVerwendung.getMengenTyp().getPid()}.html">${mengenVerwendung.getMengenName()}</a></td>
+                <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">${mengenVerwendung.getMengenTyp().getKurzinfo()}</td>
             </tr>
                 #set( $row = $row + 1 )
             #end
