--- a/src/main/resources/generator/html/uebersicht.vm
+++ b/src/main/resources/generator/html/uebersicht.vm
@@ -32,7 +32,7 @@
         #set( $row = 1 )
         #foreach( $konfigurationsbereich in $konfigurationsbereiche )
         <tr>
-            <td class="#if ($row % 2 == 0) rowColor #else altColor #end"><a href="${konfigurationsbereich.getZustaendiger().getPid()}/${konfigurationsbereich.getPid()}/index.html" target="objektFrame">$konfigurationsbereich.getName()</a></td>
+            <td class="#if ($row % 2 == 0) rowColor #else altColor #end"><a href="${konfigurationsbereich.getZustaendiger().getPid()}/${konfigurationsbereich.getPid()}/konfigurationsbereich-uebersicht.html" target="objektFrame">$konfigurationsbereich.getName()</a></td>
             <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">$konfigurationsbereich.getKurzinfo()</td>
         </tr>
             #set( $row = $row + 1 )
