--- a/src/main/resources/generator/html/uebersicht-frame.vm
+++ b/src/main/resources/generator/html/uebersicht-frame.vm
@@ -11,7 +11,7 @@
 <h2 class="konfigurationsbereiche">Konfigurationsbereiche</h2>
 <ul class="konfigurationsbereiche">
 #foreach( $konfigurationsbereich in $konfigurationsbereiche )
-    <li><a href="${konfigurationsbereich.getZustaendiger().getPid()}/${konfigurationsbereich.getPid()}/konfigurationsbereich-frame.html" target="konfigurationsbereichFrame">$konfigurationsbereich.getName()</a></li>
+    <li><a href="${konfigurationsbereich.getZustaendiger().getPid()}/${konfigurationsbereich.getPid()}/konfigurationsbereich-frame.html" target="konfigurationsbereichFrame">$konfigurationsbereich.getNameOderPid()</a></li>
 #end
 </ul>
 </body>
