--- a/src/main/resources/generator/html/konfigurationsbereich-ueberblick.vm
+++ b/src/main/resources/generator/html/konfigurationsbereich-ueberblick.vm
@@ -14,7 +14,7 @@
 <p>${konfigurationsbereich.getKurzinfo()}</p>
 <p>${konfigurationsbereich.getBeschreibung()}</p>
 #if( !$konfigurationsbereich.getTypen().isEmpty() )
-<div class="uebersicht">
+<div class="ueberblick">
     <table border="0" cellpadding="0" cellspacing="0">
         <caption><span>Typen</span></caption>
         <tbody>
@@ -35,7 +35,7 @@
 </div>
 #end
     #if( !$konfigurationsbereich.getMengen().isEmpty() )
-    <div class="uebersicht">
+    <div class="ueberblick">
         <table border="0" cellpadding="0" cellspacing="0">
             <caption><span>Mengen</span></caption>
             <tbody>
