--- a/src/main/resources/generator/html/stylesheet.css
+++ b/src/main/resources/generator/html/stylesheet.css
@@ -29,10 +29,10 @@ h2.konfigurationsbereiche, h2.objekte {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: #3465a4;
+    color: #204a87;
 }
 
-.uebersicht {
+.ueberblick {
     padding: 10px 20px;
 }
 
