--- a/src/main/resources/generator/html/konfigurationsbereich-ueberblick.vm
+++ b/src/main/resources/generator/html/konfigurationsbereich-ueberblick.vm
@@ -9,6 +9,17 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css" title="Style"/>
 </head>
 <body>
+<script type="text/javascript">
+    <!--
+    try {
+        if (location.href.indexOf('is-external=true') == -1) {
+            parent.document.title = "${konfigurationsbereich.getNameOderPid()} (Datenkatalog)";
+        }
+    }
+    catch (err) {
+    }
+    //-->
+</script>
 <p>${konfigurationsbereich.getZustaendiger().getNameOderPid()}</p>
 <h2>Konfigurationsbereich ${konfigurationsbereich.getNameOderPid()} (${konfigurationsbereich.getPid()}))</h2>
 <p>${konfigurationsbereich.getKurzinfo()}</p>
