--- a/src/main/resources/generator/html/ueberblick.vm
+++ b/src/main/resources/generator/html/ueberblick.vm
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <title>Übersicht - Datenkatalog</title>
+    <title>Überblick - Datenkatalog</title>
     <meta charset="UTF-8">
     <meta name="date" content="2015-12-05"/>
-    <meta name="keywords" content="Übersicht, Datenkatalog, NERZ, ERZ, VRZ, UZ, Verkehrsrechnerzentrale, Unterzentrale">
+    <meta name="keywords" content="Überblick, Datenkatalog, NERZ, ERZ, VRZ, UZ, Verkehrsrechnerzentrale, Unterzentrale">
     <link rel="stylesheet" type="text/css" href="stylesheet.css" title="Style"/>
 </head>
 <body>
@@ -12,14 +12,14 @@
     <!--
     try {
         if (location.href.indexOf('is-external=true') == -1) {
-            parent.document.title = "Übersicht - Datenkatalog";
+            parent.document.title = "Überblick (Datenkatalog)";
         }
     }
     catch (err) {
     }
     //-->
 </script>
-<h1>Übersicht - Datenkatalog</h1>
+<h1>Überblick - Datenkatalog</h1>
 
 <div class="ueberblick">
     <table border="0" cellpadding="0" cellspacing="0">
