--- a/src/main/resources/generator/html/mengentyp.vm
+++ b/src/main/resources/generator/html/mengentyp.vm
@@ -13,7 +13,7 @@
     <!--
     try {
         if (location.href.indexOf('is-external=true') == -1) {
-            parent.document.title = "${mengentyp.getNameOderPid()} (Datenkatalog)";
+            parent.document.title = "${mengentyp.getNameOderPid()} (${projekt})";
         }
     }
     catch (err) {
