--- a/src/main/resources/generator/html/ueberblick-frame.vm
+++ b/src/main/resources/generator/html/ueberblick-frame.vm
@@ -4,13 +4,12 @@
     <title>Konfigurationsbereiche</title>
     <meta charset="UTF-8">
     <meta name="date" content="2015-12-05"/>
-    <meta name="keywords"
-          content="Konfigurationsbereiche, Datenkatalog, NERZ, ERZ, VRZ, UZ, Verkehrsrechnerzentrale, Unterzentrale">
+    <meta name="keywords" content="Konfigurationsbereiche, Datenkatalog, NERZ, ERZ, VRZ, UZ, Verkehrsrechnerzentrale, Unterzentrale">
     <link rel="stylesheet" type="text/css" href="stylesheet.css" title="Style"/>
 </head>
 <body>
 <div class="header">
-    Datenkatalog
+    ${projekt}
 </div>
 <div class="content">
     <p><a href="alleobjekte-frame.html" target="konfigurationsbereichFrame">Alle Konfigurationsbereich</a></p>
