--- a/src/main/resources/generator/html/ueberblick.vm
+++ b/src/main/resources/generator/html/ueberblick.vm
@@ -19,6 +19,13 @@
     }
     //-->
 </script>
+<div class="header">
+    <ul>
+        <li class="active">Überblick</li>
+        <li>Konfigurationsbereich</li>
+        <li>Objekt</li>
+    </ul>
+</div>
 <div class="content">
     <h1>Überblick - ${projekt}</h1>
     <div class="ueberblick">
